# spartan-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
spartan/: Cargo.toml
spartan/src/: client.rs  lib.rs  spypoint.rs
spartan/src/cameras/: mod.rs  pictures.rs
spartan/src/client/: mod.rs
spartan/src/spypoint/: mod.rs
spartan/src/sys/: gdrive.rs  mgo.rs  mod.rs  slack.rs  sync.rs
sync/: Cargo.toml  build.rs
sync/src/: main.rs
