[workspace]
members = ["spartan", "sync"]
resolver = "2"


[workspace.dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.3"
mongodb = "3.0.0"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.119", features = ["std"] }
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.22"
spartan = { path = "../spartan" }
bytes = "1"
bson = { "version" = "2.11", features = ["chrono-0_4"] }
cloud-storage = "0.11"
chrono = "0.4"
mime = "0.3.17"
image = "0.25"