[package]
name = "spartan"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.3"
bson = { "version" = "2.11", features = ["chrono-0_4"] }
mongodb = { version = "3.0.0", features = [] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.119", features = ["std"] }
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.22"
cloud-storage = "0.11"
bytes = "1"
chrono = "0.4"
thumbnailer = "0.5"
mime = "0.3.17"
image = "0.24.9"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.37", features = ["full"] }
httpmock = "0.7"

