[package]
name = "spartan"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { workspace = true }
bson = { workspace = true }
mongodb = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
cloud-storage = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.37", features = ["full"] }
httpmock = "0.7"

